--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,23 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: "Red Hat Display", sans-serif;
+    background: #dcddf0;
+    color: white;
 }
 
-#chat-container {
+.main {
     max-width: 600px;
+    background: #1A438A;
     margin: auto;
+    margin-top:20%;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 7px rgba(0, 0, 0, 0.8);
+    text-align: center;
+    border-radius: 2px;
+}
+
+#welcome {
+    margin-bottom: 2em;
 }
 
